feat: Dockerizar aplicação com Dockerfile e docker compose

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 body{
-    background: url("/IMG/definitivo\ backgroung.jpg")
+    background: url("./IMG/definitivo\ backgroung.jpg")
 }
 
 .container{
